# dual_quant

./: CMakeLists.txt  Click.h  ComputerCard.h  LICENSE  README.md  dual_quant_pitch.cpp  info.yaml
UF2/: dual_quant_pitch.uf2
old versions/: dual_quant_pitch1.cpp  dual_quant_pitch3.cpp  dual_quant_pitch5.cpp  dual_quant_pitch6.cpp  dual_quant_pitch7.cpp  dual_quant_pitch8.cpp  dual_quant_pitch9.cpp  dual_quant_pitchA1.cpp  dual_quant_pitchA2.cpp
